--- a/_sass/type_tablet.scss
+++ b/_sass/type_tablet.scss
@@ -13,7 +13,7 @@
   h3 {
     font-weight: 500;
     color: $col_type;
-    $map: (576: 13, 768: 13, 992: 13);
+    $map: (576: 11, 768: 11, 992: 11);
     font-size: least-squares-fit($map);
     letter-spacing: 0.5em;
     text-transform: uppercase;
